--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pinput: ^3.0.1
-  qr_flutter: ^3.2.0
+  qr_flutter: 4.1.0
   firebase_storage: ^11.6.5
   firebase_auth: ^4.17.4
   get: ^4.6.6
